syntax = "proto3";
package proto;
option go_package = "code-analyser/protos/pb/plugin";

message Empty {}

message  StringOutput {
  string value = 1;
  Error error = 2;
}

message  StringInput {
  string   value = 1;
}

message  IntOutput {
  int64 value = 1;
  Error error = 2;
}

message EmptyOutput {
  Error error = 1;
}

message  FloatOutput {
  float value = 1;
  Error error = 2;
}

message  BoolOutput {
  bool value = 1;
  Error error = 2;
}

message Input {
  string runtimeVersion = 1;
  string rootPath = 2;
}

message StringMapOutput{
  map<string, string> value = 1;
  Error error = 2;
}

message Error{
  string message = 1;
  enum ErrorCode{
    Error = 0;
    //TODO discuss error codes and types
  }
  ErrorCode errorType = 2;
  string cause = 3;
}
